--- a/src/styles/verve.css
+++ b/src/styles/verve.css
@@ -515,7 +515,7 @@
   }
   
   .question-toggle {
-    background-color: #8bc3ff;
+    background-color: #9e9c9c;
     padding: 15px;
     display: flex;
     justify-content: space-between;
