--- a/src/styles/verve.css
+++ b/src/styles/verve.css
@@ -401,7 +401,6 @@
     margin: 0 auto;
     padding: 40px;
     text-align: center;
-    background-color: #fcfcfc;
     margin-top:50px;
     margin-bottom:50px;
   }
@@ -1239,7 +1238,7 @@
     overflow: hidden;
   }
   .question-toggle {
-    background-color: #8bc3ff;
+    background-color: #9e9c9c;
     padding: 15px;
     display: flex;
     justify-content: space-between;
