--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,97 +1,96 @@
 
 .Header {
    
-    background-color: #edecec;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    border-radius: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 880px;
-    margin: 0 auto;
-    padding: 10px 20px;
-  
-   
-  }
-  
-  .nav-logo a img {
-    height: 60px;
-  }
-  
-  .nav-links ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    margin-right: 10px;
-  }
-  
-  .nav-links ul li a {
-    display: block;
-    padding: 10px 15px;
-    text-decoration: none;
-    color: #333;
-    font-weight: 500;
-  }
-  .nav-links ul li a:hover{
-    color: grey;
-  }
-  
-  .nav-search input {
-    padding: 8px 15px;
-    border: 1px solid #ddd;
-    border-radius: 20px;
-    outline: none;
-  }
-  
-  .nav-actions a {
-    margin-left: 10px;
-    padding: 8px 15px;
-    border-radius: 20px;
-    text-decoration: none;
-    font-weight: 400;
-  }
-  
-  .btn-login {
-    color: #333;
-    background-color: transparent;
-  }
-  
-  .btn-signup {
-    color: #fff;
-    background-color: #333;
-    border-radius: 5px;
-    width: 60px;
-  }
-  .Header .navOpenBtn,
-  .Header .navCloseBtn{
-    display:none;
-  }
-  .logo{
-    display:none;
-  }
+  background-color: #ffffff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 880px;
+  margin: 0 auto;
+  padding: 10px 20px;
+ 
+}
 
-  .Header .navCloseBtn{
+.nav-logo a img {
+  height: 60px;
+}
+
+.nav-links ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-right: 10px;
+}
+
+.nav-links ul li a {
+  display: block;
+  padding: 10px 15px;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+}
+.nav-links ul li a:hover{
+  color: grey;
+}
+
+.nav-search input {
+  padding: 8px 15px;
+  border: 1px solid #ddd;
+  border-radius: 20px;
+  outline: none;
+}
+
+.nav-actions a {
+  margin-left: 10px;
+  padding: 8px 15px;
+  border-radius: 20px;
+  text-decoration: none;
+  font-weight: 400;
+}
+
+.btn-login {
+  color: #333;
+  background-color: transparent;
+}
+
+.btn-signup {
+  color: #fff;
+  background-color: #333;
+  border-radius: 5px;
+  width: 60px;
+}
+.Header .navOpenBtn,
+.Header .navCloseBtn{
+  display:none;
+}
+.logo{
+  display:none;
+}
+
+.Header .navCloseBtn{
 font-size: 25px;  }
 
-  @media screen and (max-width:1200px) {
-    .Header .navCloseBtn{
-      display: block;
-    }
+@media screen and (max-width:1200px) {
+  .Header .navCloseBtn{
+    display: block;
   }
+}
 
-  @media screen and ( max-width: 768px){
-    .Header{
-        
-    background-color: #edecec;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    border-radius: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 300px;
-    margin: 0 auto;
-    padding: 10px 20px;
-    margin-top: 50px;
-    }
+@media screen and ( max-width: 768px){
+  .Header{
+      
+  background-color: #ffffff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 10px 20px;
+  margin-top: 50px;
   }
+}
