--- a/src/styles/info.css
+++ b/src/styles/info.css
@@ -3,7 +3,7 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background-image: url(/public/images/bgv.jpg);
+    background-image: url(/public/images/ffuel.webp);
     background-size: cover;
     background-position: center;
     padding: 20px;
