--- a/src/styles/marquee.css
+++ b/src/styles/marquee.css
@@ -29,6 +29,7 @@
     font-weight: bold;
     color: #333;
     padding-right: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
   }
   
   @keyframes marquee {
